# igntui

./: .editorconfig  .gitignore  .igntui.cfg.toml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/concepts/: caching.md  managed-blocks.md  return-codes.md
docs/files/: igntui-cfg-toml.md  igntui-repo-cfg-toml.md  usage-data.md  user-config.md
docs/reference/: igntui-cache-clear.md  igntui-cache-info.md  igntui-cache-stats.md  igntui-cache.md  igntui-completion.md  igntui-generate.md  igntui-list.md  igntui-test.md  igntui-tui.md  igntui.md
docs/tui/: keyboard-and-mouse.md  overview.md
src/igntui/: __init__.py  __main__.py  app.py  main.py
src/igntui/cli/: __init__.py  base.py  parser.py  setup.py
src/igntui/cli/commands/: __init__.py  cache_cmd.py  completion_cmd.py  generate_cmd.py  list_cmd.py  test_cmd.py  tui_cmd.py
src/igntui/core/: __init__.py  cache.py  config.py  managed_block.py  project_config.py  repo_config.py  search.py  usage.py
src/igntui/core/api/: __init__.py  client.py  errors.py  rate_limiter.py  request_handler.py  response.py  types.py
src/igntui/tui/: __init__.py  actions.py  app.py  curses_setup.py  event_handler.py  lifecycle.py  renderer.py  state.py  updates.py
src/igntui/ui/: __init__.py
src/igntui/ui/components/: __init__.py  base_dialog.py  base_panel.py  confirm_dialog.py  content_panel.py  diff_preview_dialog.py  export_dialog.py  help_dialog.py  save_dialog.py  search_panel.py  selected_panel.py  splash.py  status_bar.py  templates_panel.py
src/igntui/utils/: __init__.py  logging.py
tests/: conftest.py
tests/cli/: test_generate_cmd.py
tests/core/: test_api.py  test_cache.py  test_config_cascade.py  test_managed_block.py  test_project_config.py  test_repo_config.py  test_search.py  test_usage.py
tests/tui/: test_diff_dialog.py  test_lifecycle.py  test_lifecycle_queue.py
